--- a/about.html
+++ b/about.html
@@ -12,9 +12,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b80849d514.js" crossorigin="anonymous"></script>
-    <title>About</title>
+    <title>About | Dilhani Seneviratne</title>
 </head>
 <body>
+    <div id="top">
+        <nav class="navbar sticky-top navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">
+                <div class="logo">
+                    ・D/S・
+                </div>
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" aria-current="page" href="/">Home</a>
+                  <a class="nav-link  active" href="about.html">About</a>
+                  <a class="nav-link" href="projects.html">Projects</a>
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     <div class="hero-container-subpage">
             <div class="hero-content-subpage">
                 <div class="heading-about"></div>
@@ -48,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tools-container-subpage" id="tools-element-subpage">
+                <div class="tools-container-subpage mt-5" id="tools-element-subpage">
                     <h2>Skills & Technology</h2>
                     <div class="tools-content">
                         <div class="tools-row">
@@ -77,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="certificates-container" id="certificates-container">
+                <div class="certificates-container mt-5" id="certificates-container">
                     <h2>Certificates</h2>
                     <div class="certificates-content">
                         <div class="row">
@@ -104,8 +125,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="scroll-up-button">
+                    <a href="about.html#top" class="scroll-up-text" title="scroll-to-top">
+                        Back to top <i class="fas fa-angle-double-up"></i>
+                    </a>
+                </div>
             </div>
         </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
+    </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
 </body>
 </html>
