--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,28 @@
     <script src="https://kit.fontawesome.com/b80849d514.js" crossorigin="anonymous"></script>
     <title>Contact | Dilhani Seneviratne</title>
 </head>
-<body class="page-border">
+<body>
+<div id="top">
+    <nav class="navbar sticky-top navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+            <div class="logo">
+                ・D/S・
+            </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" aria-current="page" href="/">Home</a>
+                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="projects.html">Projects</a>
+                <a class="nav-link active" href="contact.html">Contact</a>
+            </div>
+            </div>
+        </div>
+        </nav>
     <div class="hero-container-subpage">
         <div class="hero-content-subpage">
             <div class="heading-about"></div>
@@ -43,6 +64,7 @@
             </div>
         </div>
     </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
 </body>
 </html>
