--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,27 @@
     <title>Projects | Dilhani Seneviratne</title>
 </head>
 <body>
+    <div id="top">
+        <nav class="navbar sticky-top navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                <div class="logo">
+                    ・D/S・
+                </div>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
+                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link active" href="projects.html">Projects</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </div>
+                </div>
+            </div>
+            </nav>
     <div class="hero-container-subpage">
         <div class="hero-content-subpage">
             <div class="heading-about"></div>
@@ -28,7 +49,7 @@
             <div class="projects-content-container">
                 <div class="row">
                     <div class="col-lg-4 project-1">
-                        <img src="media/project-images/1.png" alt="" class="project-images img-fluid d-none-md d-block ">
+                        <img src="media/project-images/1.svg" alt="" class="project-images img-fluid" width="400px">
                         <h2>World Destination Clock</h2>
                         <br />
                         <p>
@@ -45,7 +66,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <img src="media/project-images/2.png" alt="" class="project-images img-fluid">
+                        <img src="media/project-images/2.svg" alt="" class="project-images img-fluid" width="400px">
                         <h2 class="sub-subheading">Vanilla JS Weather App</h2>
                         <br />
                         <p>
@@ -62,7 +83,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <img src="media/project-images/3.png" alt="" class="project-images img-fluid">
+                        <img src="media/project-images/3.svg" alt="" class="project-images img-fluid" width="400px">
                         <h2>Portfolio</h2>
                         <br />
                         <p>
@@ -83,6 +104,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
 </body>
