added url's to projects pages buttons

--- a/projects.html
+++ b/projects.html
@@ -61,8 +61,8 @@
                         </p>
                         <br />
                         <div class="buttons-projects">
-                            <a href="http://"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                            <a href="http://"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                            <a href="https://github.com/dsen12/World-clock.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                            <a href="https://worldclock-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -78,8 +78,8 @@
                         </p>
                         <br />
                         <div class="buttons-projects">
-                            <a href="http://"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                            <a href="http://"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                            <a href="https://github.com/dsen12/Weather-app.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                            <a href="https://weather-app-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -97,8 +97,8 @@
                         <br />
                         <br />
                         <div class="buttons-projects">
-                            <a href="http://"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                            <a href="http://"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                            <a href="https://github.com/dsen12/Portfolio.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                            <a href="https://portfolio-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
                         </div>
                     </div>
                 </div>
