added footer to all pages. small styling changes. made changes to structure of page html for efficiency.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Front-End Developer | Dilhani Seneviratne</title>
 </head>
 <body>
-    <div id="top">
+<div id="top">
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -64,72 +64,82 @@
                     Here are a few of the things that I have been trained on:
                 </p>
                 <div class="tools-container-homepage">
-                        <div>
-                            <i class="fa-brands fa-html5"></i>
-                            <br>
-                            HTML</div>
-                        <div>
-                            <i class="fa-brands fa-css3-alt"></i>
-                            <br>
-                            CSS
-                        </div>
-                        <div>
-                            <i class="fa-brands fa-square-js"></i>
-                            <br>
-                            JAVASCRIPT</div>
-                        <div>
-                            <i class="fa-solid fa-gears"></i>
-                            <br>
-                            API</div>
-                        <div>
-                            <i class="fa-brands fa-bootstrap"></i>
-                            <br>
-                            BOOTSTRAP</div>
-                        <div>
-                            <i class="fa-solid fa-code"></i>
-                            <br>
-                            VS CODE</div>
-                        <div>
-                            <i class="fa-brands fa-square-github"></i>
-                            <br>
-                            GIT/GITHUB</div>
-                        <div>
-                            <i class="fa-solid fa-server"></i>
-                            <br>
-                            NETLIFY</div>
-                        <div>
-                            <i class="fa-solid fa-box"></i>
-                            <br>
-                            FLEXBOX</div>
-                        <div>
-                            <i class="fa-solid fa-tablet"></i>
-                            <br>
-                            RESPONSIVE</div>
-                        <div>
-                            <i class="fa-brands fa-google"></i>
-                            <br>
-                            SEO</div>
-                        <div>
-                            <i class="fa-brands fa-react"></i>
-                            <br>
-                            REACT</div>
+                    <div>
+                        <i class="fa-brands fa-html5"></i>
+                        <br>
+                        HTML</div>
+                    <div>
+                        <i class="fa-brands fa-css3-alt"></i>
+                        <br>
+                        CSS
                     </div>
+                    <div>
+                        <i class="fa-brands fa-square-js"></i>
+                        <br>
+                        JAVASCRIPT</div>
+                    <div>
+                        <i class="fa-solid fa-gears"></i>
+                        <br>
+                        API</div>
+                    <div>
+                        <i class="fa-brands fa-bootstrap"></i>
+                        <br>
+                        BOOTSTRAP</div>
+                    <div>
+                        <i class="fa-solid fa-code"></i>
+                        <br>
+                        VS CODE</div>
+                    <div>
+                        <i class="fa-brands fa-square-github"></i>
+                        <br>
+                        GIT/GITHUB</div>
+                    <div>
+                        <i class="fa-solid fa-server"></i>
+                        <br>
+                        NETLIFY</div>
+                    <div>
+                        <i class="fa-solid fa-box"></i>
+                        <br>
+                        FLEXBOX</div>
+                    <div>
+                        <i class="fa-solid fa-tablet"></i>
+                        <br>
+                        RESPONSIVE</div>
+                    <div>
+                        <i class="fa-brands fa-google"></i>
+                        <br>
+                        SEO</div>
+                    <div>
+                        <i class="fa-brands fa-react"></i>
+                        <br>
+                        REACT</div>
                 </div>
             </div>
             <div class="buttons-homepage">
                 <div class="about-button-homepage">
-                    <a href="/about.html" class="btn btn-branding">ABOUT</a>
+                    <a href="/about.html" class="btn btn-branding">LEARN MORE</a>
                 </div>
                 <div class="projects-button-homepage">
                     <a href="/projects.html" class="btn btn-branding">PROJECTS</a>
                 </div>
             </div>
-            <div class="scroll-up-button">
-                <a href="index.html#top" class="scroll-up-text" title="scroll-to-top">
-                    Back to top <i class="fas fa-angle-double-up"></i>
-                </a>
-            </div>
         </div>
+        <footer>
+            <div class="reach-out text-center">
+                Let's work together! Reach out ↓
+            </div>
+            <div class="social-links text-center">
+                <a href="mailto:dilhani.08@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/dsen12" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </div>
+        </footer>
+        <div class="scroll-up-button">
+            <a href="index.html#top" class="scroll-up-text" title="scroll-to-top">
+                Back to top <i class="fas fa-angle-double-up"></i>
+            </a>
+        </div>
+        <p class="coder">This site is coded by D.Sen and is <a href="https://github.com/dsen12/Portfolio.git">open-sourced</a> on GitHub.</p>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
