--- a/projects.html
+++ b/projects.html
@@ -36,75 +36,91 @@
                 </div>
             </div>
             </nav>
-    <div class="hero-container-subpage">
-        <div class="hero-content-subpage">
-            <div class="heading-about"></div>
-            <div>
-                <h1 class="">Projects</h1>
+        <div class="hero-container-subpage">
+            <div class="hero-content-subpage">
+                <div class="heading-about"></div>
+                <div>
+                    <h1 class="">Projects</h1>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="content-container-subpage" id="about-container">
-        <div class="content-subpage text-center">
-            <div class="projects-content-container">
-                <div class="row">
-                    <div class="col-lg-4 project-1">
-                        <img src="media/project-images/1.svg" alt="" class="project-images img-fluid" width="400px">
-                        <h2>World Destination Clock</h2>
-                        <br />
-                        <p>
-                            This weather application allows you to check the current weather & 6-day forecast of any city in the world, including your current location.
-                        </p>
-                        <br />
-                        <p>
-                            HTML ・ CSS ・ JAVASCRIPT ・ API ・ BOOTSTRAP
-                        </p>
-                        <br />
-                        <div class="buttons-projects">
-                            <a href="https://github.com/dsen12/World-clock.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                            <a href="https://worldclock-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+        <div class="content-container-subpage" id="about-container">
+            <div class="content-subpage text-center">
+                <div class="projects-content-container">
+                    <div class="row">
+                        <div class="col-lg-4 project-1">
+                            <img src="media/project-images/1.svg" alt="" class="project-images img-fluid" width="400px">
+                            <h2>World Destination Clock</h2>
+                            <br />
+                            <p>
+                                This weather application allows you to check the current weather & 6-day forecast of any city in the world, including your current location.
+                            </p>
+                            <br />
+                            <p>
+                                HTML ・ CSS ・ JAVASCRIPT ・ API ・ BOOTSTRAP
+                            </p>
+                            <br />
+                            <div class="buttons-projects">
+                                <a href="https://github.com/dsen12/World-clock.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                                <a href="https://worldclock-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <img src="media/project-images/2.svg" alt="" class="project-images img-fluid" width="400px">
-                        <h2 class="sub-subheading">Vanilla JS Weather App</h2>
-                        <br />
-                        <p>
-                            This world-clock application displays the local time and date of select cities around the world, including your current location. 
-                        </p>
-                        <br />
-                        <p>
-                            HTML ・ CSS ・ JAVASCRIPT ・ BOOTSTRAP
-                        </p>
-                        <br />
-                        <div class="buttons-projects">
-                            <a href="https://github.com/dsen12/Weather-app.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                            <a href="https://weather-app-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                        <div class="col-lg-4">
+                            <img src="media/project-images/2.svg" alt="" class="project-images img-fluid" width="400px">
+                            <h2 class="sub-subheading">Vanilla JS Weather App</h2>
+                            <br />
+                            <p>
+                                This world-clock application displays the local time and date of select cities around the world, including your current location. 
+                            </p>
+                            <br />
+                            <p>
+                                HTML ・ CSS ・ JAVASCRIPT ・ BOOTSTRAP
+                            </p>
+                            <br />
+                            <div class="buttons-projects">
+                                <a href="https://github.com/dsen12/Weather-app.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                                <a href="https://weather-app-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <img src="media/project-images/3.svg" alt="" class="project-images img-fluid" width="400px">
-                        <h2>Portfolio</h2>
-                        <br />
-                        <p>
-                            This is my online, responsive portfolio. 
-                            <p class="tag-line">(where you are right now!)</p>
-                        </p>
-                        <br />
-                        <p>
-                            HTML ・ CSS ・ FLEXBOX ・ BOOTSTRAP
-                        </p>
-                        <br />
-                        <br />
-                        <div class="buttons-projects">
-                            <a href="https://github.com/dsen12/Portfolio.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                            <a href="https://portfolio-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                        <div class="col-lg-4">
+                            <img src="media/project-images/3.svg" alt="" class="project-images img-fluid" width="400px">
+                            <h2>Portfolio</h2>
+                            <br />
+                            <p>
+                                This is my online, responsive portfolio. 
+                                <p class="tag-line">(where you are right now!)</p>
+                            </p>
+                            <br />
+                            <p>
+                                HTML ・ CSS ・ FLEXBOX ・ BOOTSTRAP
+                            </p>
+                            <br />
+                            <br />
+                            <div class="buttons-projects">
+                                <a href="https://github.com/dsen12/Portfolio.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                                <a href="https://portfolio-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <footer>
+                <div class="reach-out text-center">
+                    Let's work together! Reach out ↓
+                </div>
+                <div class="social-links text-center">
+                    <a href="mailto:dilhani.08@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/dsen12" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </footer>
+            <div class="scroll-up-button">
+                <a href="index.html#top" class="scroll-up-text" title="scroll-to-top">
+                    Back to top <i class="fas fa-angle-double-up"></i>
+                </a>
+            </div>
+            <p class="coder">This site is coded by D.Sen and is <a href="https://github.com/dsen12/Portfolio.git">open-sourced</a> on GitHub.</p>
         </div>
-    </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
 </body>
