--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
                 </div>
               </div>
             </div>
-          </nav>
-    <div class="hero-container-subpage">
+            </nav>
+        <div class="hero-container-subpage">
             <div class="hero-content-subpage">
                 <div class="heading-about"></div>
                 <div>
@@ -125,12 +125,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="scroll-up-button">
-                    <a href="about.html#top" class="scroll-up-text" title="scroll-to-top">
-                        Back to top <i class="fas fa-angle-double-up"></i>
-                    </a>
-                </div>
             </div>
+            <footer>
+                <div class="reach-out text-center">
+                    Let's work together! Reach out ↓
+                </div>
+                <div class="social-links text-center">
+                    <a href="mailto:dilhani.08@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/dsen12" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </footer>
+            <div class="scroll-up-button">
+                <a href="index.html#top" class="scroll-up-text" title="scroll-to-top">
+                    Back to top <i class="fas fa-angle-double-up"></i>
+                </a>
+            </div>
+            <p class="coder">This site is coded by D.Sen and is <a href="https://github.com/dsen12/Portfolio.git">open-sourced</a> on GitHub.</p>
         </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
