--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,11 @@
         <div class="hero-content-subpage">
             <div class="heading-about"></div>
             <div>
-                <h1 class="">Contact Me</h1>
+                <h1 class="">Contact</h1>
             </div>
         </div>
     </div>
-    <div class="content-container-subpage" id="about-container">
+    <div class="content-container-subpage text-center" id="about-container">
         <div class="content-subpage">
             <h2 class="subheading mb-3">Let's get in touch!</h2>
             <p class="mb-2">I’m currently looking to join a new team of creative designers and developers. I'd love to hear from you!</p>
@@ -63,6 +63,7 @@
                 </div>
             </div>
         </div>
+        <p class="coder">This site is coded by D.Sen and is <a href="https://github.com/dsen12/Portfolio.git">open-sourced</a> on GitHub.</p>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
