added bootstrap cards to restructure projects page & styled.

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                         <div class="row">
                             <div class="col-lg-7">
                                 <p>
-                                    I'm on a learning journey to become a professional developer. 
+                                    I am currently on a learning journey to become a professional developer. 
                                     <br>
                                     <br>
                                     I first had a glimpse of web development in 2011. Equipped with nothing but determination & Google, I was customising my Tumblr themes to fit the aesthetics & purpose of my blogs. These blogs are long gone, but my interest in coding was forever piqued, although I decided to pursue other endeavours. 
