--- a/projects.html
+++ b/projects.html
@@ -38,68 +38,63 @@
             </nav>
         <div class="hero-container-subpage">
             <div class="hero-content-subpage">
-                <div class="heading-about"></div>
                 <div>
                     <h1 class="">Projects</h1>
                 </div>
+                <h2 class="subheading">Take a look at what I've been working on:</h2>
             </div>
         </div>
-        <div class="content-container-subpage" id="about-container">
-            <div class="content-subpage text-center">
-                <div class="projects-content-container">
+        <div class="content-container-subpage" id="projects-container">
+            <div class="projects content-subpage">
+                <div class="projects-content-container text-center">
                     <div class="row">
-                        <div class="col-lg-4 project-1">
-                            <img src="media/project-images/1.svg" alt="" class="project-images img-fluid" width="400px">
-                            <h2>World Destination Clock</h2>
-                            <br />
-                            <p>
-                                This weather application allows you to check the current weather & 6-day forecast of any city in the world, including your current location.
-                            </p>
-                            <br />
-                            <p>
-                                HTML ・ CSS ・ JAVASCRIPT ・ API ・ BOOTSTRAP
-                            </p>
-                            <br />
-                            <div class="buttons-projects">
-                                <a href="https://github.com/dsen12/World-clock.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                                <a href="https://worldclock-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
-                            </div>
+                        <div class="col-md-4 project-background">
+                          <div class="card text-center">
+                              <img class="card-img-top project-images" src="media/project-images/1.svg" alt="">
+                              <div class="card-body">
+                                  <h5 class="card-title">World Destination Clock</h5>
+                                  <p class="card-text">This weather application allows you to check the current weather & 6-day forecast of any city in the world, including your current location.
+                                  </p>
+                                  <p>
+                                      HTML ・ CSS ・ JAVASCRIPT ・ API ・ BOOTSTRAP
+                                  </p>
+                                  <a href="https://github.com/dsen12/World-clock.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                                  <a href="https://worldclock-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                              </div>
+                          </div>
                         </div>
-                        <div class="col-lg-4">
-                            <img src="media/project-images/2.svg" alt="" class="project-images img-fluid" width="400px">
-                            <h2 class="sub-subheading">Vanilla JS Weather App</h2>
-                            <br />
-                            <p>
-                                This world-clock application displays the local time and date of select cities around the world, including your current location. 
-                            </p>
-                            <br />
-                            <p>
-                                HTML ・ CSS ・ JAVASCRIPT ・ BOOTSTRAP
-                            </p>
-                            <br />
-                            <div class="buttons-projects">
-                                <a href="https://github.com/dsen12/Weather-app.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                                <a href="https://weather-app-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
-                            </div>
+                        <div class="col-md-4 project-background">
+                          <div class="card text-center">
+                              <img class="card-img-top project-images" src="media/project-images/2.svg" alt="">
+                              <div class="card-body">
+                                  <h5 class="card-title">Vanilla JS Weather App</h5>
+                                  <p class="card-text">
+                                      This world-clock application displays the local time and date of select cities around the world, including your current location. 
+                                  </p>
+                                  <p>
+                                      HTML ・ CSS ・ JAVASCRIPT ・ BOOTSTRAP
+                                  </p>
+                                  <a href="https://github.com/dsen12/Weather-app.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                                  <a href="https://weather-app-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                      </div>
+                          </div>
                         </div>
-                        <div class="col-lg-4">
-                            <img src="media/project-images/3.svg" alt="" class="project-images img-fluid" width="400px">
-                            <h2>Portfolio</h2>
-                            <br />
-                            <p>
-                                This is my online, responsive portfolio. 
-                                <p class="tag-line">(where you are right now!)</p>
-                            </p>
-                            <br />
-                            <p>
-                                HTML ・ CSS ・ FLEXBOX ・ BOOTSTRAP
-                            </p>
-                            <br />
-                            <br />
-                            <div class="buttons-projects">
-                                <a href="https://github.com/dsen12/Portfolio.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                                <a href="https://portfolio-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
-                            </div>
+                        <div class="col-md-4 project-background">
+                          <div class="card text-center">
+                              <img class="card-img-top project-images" src="media/project-images/3.svg" alt="">
+                              <div class="card-body">
+                                  <h5 class="card-title">Portfolio</h5>
+                                  <p class="card-text">
+                                      This is my online, responsive portfolio. 
+                                      <p class="tag-line">(where you are right now!)</p>
+                                  </p>
+                                  <p>
+                                      HTML ・ CSS ・ FLEXBOX ・ BOOTSTRAP
+                                  </p>
+                                  <a href="https://github.com/dsen12/Portfolio.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                                  <a href="https://portfolio-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                              </div>
+                          </div>
                         </div>
                     </div>
                 </div>
