--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="content-container-subpage text-center" id="about-container">
-        <div class="content-subpage">
+        <div class="contact content-subpage">
             <h2 class="subheading mb-3">Let's get in touch!</h2>
             <p class="mb-2">I’m currently looking to join a new team of creative designers and developers. I'd love to hear from you!</p>
             <div class="contact-content-container">
