updated pathways for scroll up buttons on subpages

--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
                 </div>
             </footer>
             <div class="scroll-up-button">
-                <a href="index.html#top" class="scroll-up-text" title="scroll-to-top">
+                <a href="about.html#top" class="scroll-up-text" title="scroll-to-top">
                     Back to top <i class="fas fa-angle-double-up"></i>
                 </a>
             </div>
