--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
                 </div>
             </footer>
             <div class="scroll-up-button">
-                <a href="index.html#top" class="scroll-up-text" title="scroll-to-top">
+                <a href="projects.html#top" class="scroll-up-text" title="scroll-to-top">
                     Back to top <i class="fas fa-angle-double-up"></i>
                 </a>
             </div>
