updated spelling & grammar

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 </div>
                 <div>
                     <h2 class="sub-subheading">/LinkedIn <i class="fa-brands fa-linkedin"></i></h2>
-                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank">Dilhani Seneviratne</a>
+                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank">view profile here</a>
                 </div>
                 <div>
                     <h2 class="sub-subheading">/GitHub <i class="fa-brands fa-square-github"></i></h2>
