--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 <h2 class="subheading">Welcome!</h2>
             </div>
             <div class="welcome-message">
-                <p class="mb-5">It's nice to meet you. Thank you for visiting my online portfolio. 
+                <p class="mb-5">Thank you for visiting my online portfolio. 
                     <br>
                     <br>
                     My name is <strong>Dilhani</strong>. I am a budding web developer with a focus on Front-End Development, currently based in <strong>Adelaide, Australia</strong>. 
                     <br>
                     <br>
-                    I started my official coding journey in 2022 by joining the SheCodes community. Since then, I have been consistently working on project/designs to further improve my coding skills. 
+                    I started my official coding journey in 2022 by joining the SheCodes community. Since then, I have been consistently working on projects/designs to further improve my coding skills. 
                     <br>
                     <br>
                     Here are a few of the things that I have been trained on:
