--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,8 @@
                               <img class="card-img-top project-images" src="media/project-images/1.svg" alt="">
                               <div class="card-body">
                                   <h5 class="card-title">World Destination Clock</h5>
-                                  <p class="card-text">This weather application allows you to check the current weather & 6-day forecast of any city in the world, including your current location.
+                                  <p class="card-text">
+                                    This world-clock application displays the local time and date of select cities around the world, including your current location. 
                                   </p>
                                   <p>
                                       HTML ・ CSS ・ JAVASCRIPT ・ API ・ BOOTSTRAP
@@ -69,7 +70,7 @@
                               <div class="card-body">
                                   <h5 class="card-title">Vanilla JS Weather App</h5>
                                   <p class="card-text">
-                                      This world-clock application displays the local time and date of select cities around the world, including your current location. 
+                                    This weather application allows you to check the current weather & 6-day forecast of over 200,000 cities in the world, including your current location.
                                   </p>
                                   <p>
                                       HTML ・ CSS ・ JAVASCRIPT ・ BOOTSTRAP
@@ -92,7 +93,7 @@
                                       HTML ・ CSS ・ FLEXBOX ・ BOOTSTRAP
                                   </p>
                                   <a href="https://github.com/dsen12/Portfolio.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
-                                  <a href="https://portfolio-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                                  <a href="https://portfolio-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view site</i></a>
                               </div>
                           </div>
                         </div>
