--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dilhani Seneviratne is on a coding journey to be a professional Front-End Engineer. She is consistently improving her skills and adding new ones.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="src/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +19,7 @@
     <div id="top">
         <nav class="navbar sticky-top navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">
+              <a class="navbar-brand" href="index.html" title="Dilhani Senaviratne's Homepage">
                 <div class="logo">
                     ・D/S・
                 </div>
@@ -28,10 +29,10 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link" aria-current="page" href="/">Home</a>
-                  <a class="nav-link  active" href="about.html">About</a>
-                  <a class="nav-link" href="projects.html">Projects</a>
-                  <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" aria-current="page" href="/" title="Dilhani Senaviratne's Homepage">Home</a>
+                    <a class="nav-link active" href="about.html" title="About Dilhani Senaviratne">About</a>
+                    <a class="nav-link" href="projects.html" title="Projects by Dilhani Senaviratne">Projects</a>
+                    <a class="nav-link" href="contact.html" title="Contact Dilhani Senaviratne">Contact</a>
                 </div>
               </div>
             </div>
@@ -64,7 +65,7 @@
                                 </p>
                             </div>
                             <div class="col-lg-5">
-                                <img src="media/headshot.png" alt="" width="500px" class="head-shot img-fluid">
+                                <img src="media/headshot.png" alt="Avatar image of Dilhani Seneviratne" width="500px" class="head-shot img-fluid">
                             </div>
                         </div>
                     </div>
@@ -131,9 +132,9 @@
                     Let's work together! Reach out ↓
                 </div>
                 <div class="social-links text-center">
-                    <a href="mailto:dilhani.08@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="https://github.com/dsen12" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="mailto:dilhani.08@gmail.com" target="_blank" title="Email Dilhani Seneviratne"><i class="fa-regular fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank" title="Dilhani Seneviratne's LinkedIn Profile"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/dsen12" target="_blank" title="Dilhani Seneviratne's GitHub Profile"><i class="fa-brands fa-github"></i></a>
                 </div>
             </footer>
             <div class="scroll-up-button">
