--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Connect with Dilhani Seneviratne via email, LinkedIn or GitHub for collaborations or job offers.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="src/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +19,7 @@
 <div id="top">
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.html" title="Dilhani Senaviratne's Homepage">
             <div class="logo">
                 ・D/S・
             </div>
@@ -28,10 +29,10 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" aria-current="page" href="/">Home</a>
-                <a class="nav-link" href="about.html">About</a>
-                <a class="nav-link" href="projects.html">Projects</a>
-                <a class="nav-link active" href="contact.html">Contact</a>
+                <a class="nav-link" aria-current="page" href="/" title="Dilhani Senaviratne's Homepage">Home</a>
+                <a class="nav-link" href="about.html" title="About Dilhani Senaviratne">About</a>
+                <a class="nav-link" href="projects.html" title="Projects by Dilhani Senaviratne">Projects</a>
+                <a class="nav-link active" href="contact.html" title="Contact Dilhani Senaviratne">Contact</a>
             </div>
             </div>
         </div>
