--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dilhani Seneviratne is an aspiring Front-End Engineer based in Australia. She has trained in HTML, CSS, JavaScript, Bootstrap, Responsive Design, version control and more. Contact her for collaborations or job offers.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="src/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +17,7 @@
 <div id="top">
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/" title="Dilhani Senaviratne's Homepage">
             <div class="logo">
                 ・D/S・
             </div>
@@ -26,10 +27,10 @@
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-              <a class="nav-link" href="about.html">About</a>
-              <a class="nav-link" href="projects.html">Projects</a>
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link active" aria-current="page" href="/" title="Dilhani Senaviratne's Homepage">Home</a>
+              <a class="nav-link" href="about.html" title="About Dilhani Senaviratne">About</a>
+              <a class="nav-link" href="projects.html" title="Projects by Dilhani Senaviratne">Projects</a>
+              <a class="nav-link" href="contact.html" title="Contact Dilhani Senaviratne">Contact</a>
             </div>
           </div>
         </div>
@@ -129,9 +130,9 @@
                 Let's work together! Reach out ↓
             </div>
             <div class="social-links text-center">
-                <a href="mailto:dilhani.08@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://github.com/dsen12" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="mailto:dilhani.08@gmail.com" target="_blank" title="Email Dilhani Seneviratne"><i class="fa-regular fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank" title="Dilhani Seneviratne's LinkedIn Profile"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/dsen12" target="_blank" title="Dilhani Seneviratne's GitHub Profile"><i class="fa-brands fa-github"></i></a>
             </div>
         </footer>
         <div class="scroll-up-button">
@@ -139,7 +140,7 @@
                 Back to top <i class="fas fa-angle-double-up"></i>
             </a>
         </div>
-        <p class="coder">This site is coded by D.Sen and is <a href="https://github.com/dsen12/Portfolio.git">open-sourced</a> on GitHub.</p>
+        <p class="coder">This site is coded by D.Sen and is <a href="https://github.com/dsen12/Portfolio.git" title="GitHub repository">open-sourced</a> on GitHub.</p>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
