--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn about Dilhani Seneviratne's projects, the skills and tools used to build them as well as the live site/app & Git hub repositories.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="src/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +19,7 @@
     <div id="top">
         <nav class="navbar sticky-top navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="index.html" title="Dilhani Senaviratne's Homepage">
                 <div class="logo">
                     ・D/S・
                 </div>
@@ -28,10 +29,10 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" href="/">Home</a>
-                    <a class="nav-link" href="about.html">About</a>
-                    <a class="nav-link active" href="projects.html">Projects</a>
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" aria-current="page" href="/" title="Dilhani Senaviratne's Homepage">Home</a>
+                    <a class="nav-link" href="about.html" title="About Dilhani Senaviratne">About</a>
+                    <a class="nav-link active" href="projects.html" title="Projects by Dilhani Senaviratne">Projects</a>
+                    <a class="nav-link" href="contact.html" title="Contact Dilhani Senaviratne">Contact</a>
                 </div>
                 </div>
             </div>
@@ -50,7 +51,7 @@
                     <div class="row">
                         <div class="col-md-4 project-background">
                           <div class="card text-center">
-                              <img class="card-img-top project-images" src="media/project-images/1.svg" alt="">
+                              <img class="card-img-top project-images" src="media/project-images/1.svg" alt="Mock up of World Destination Clock">
                               <div class="card-body">
                                   <h5 class="card-title">World Destination Clock</h5>
                                   <p class="card-text">
@@ -66,7 +67,7 @@
                         </div>
                         <div class="col-md-4 project-background">
                           <div class="card text-center">
-                              <img class="card-img-top project-images" src="media/project-images/2.svg" alt="">
+                              <img class="card-img-top project-images" src="media/project-images/2.svg" alt="mock up of Vanilla JS Weather App">
                               <div class="card-body">
                                   <h5 class="card-title">Vanilla JS Weather App</h5>
                                   <p class="card-text">
@@ -82,7 +83,7 @@
                         </div>
                         <div class="col-md-4 project-background">
                           <div class="card text-center">
-                              <img class="card-img-top project-images" src="media/project-images/3.svg" alt="">
+                              <img class="card-img-top project-images" src="media/project-images/3.svg" alt="Mock up of Dilhani Seneviratne's portfolio">
                               <div class="card-body">
                                   <h5 class="card-title">Portfolio</h5>
                                   <p class="card-text">
@@ -105,9 +106,9 @@
                     Let's work together! Reach out ↓
                 </div>
                 <div class="social-links text-center">
-                    <a href="mailto:dilhani.08@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="https://github.com/dsen12" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="mailto:dilhani.08@gmail.com" target="_blank" title="Email Dilhani Seneviratne"><i class="fa-regular fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank" title="Dilhani Seneviratne's LinkedIn Profile"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/dsen12" target="_blank" title="Dilhani Seneviratne's GitHub Profile"><i class="fa-brands fa-github"></i></a>
                 </div>
             </footer>
             <div class="scroll-up-button">
