--- a/index.html
+++ b/index.html
@@ -65,55 +65,57 @@
                     Here are a few of the things that I have been trained on:
                 </p>
                 <div class="tools-container-homepage">
-                    <div>
-                        <i class="fa-brands fa-html5"></i>
-                        <br>
-                        HTML</div>
-                    <div>
-                        <i class="fa-brands fa-css3-alt"></i>
-                        <br>
-                        CSS
+                    <div class="tools-with-icons">
+                        <div>
+                            <i class="fa-brands fa-html5"></i>
+                            <br>
+                            HTML</div>
+                        <div>
+                            <i class="fa-brands fa-css3-alt"></i>
+                            <br>
+                            CSS
+                        </div>
+                        <div>
+                            <i class="fa-brands fa-square-js"></i>
+                            <br>
+                            JAVASCRIPT</div>
+                        <div>
+                            <i class="fa-solid fa-gears"></i>
+                            <br>
+                            API</div>
+                        <div>
+                            <i class="fa-brands fa-bootstrap"></i>
+                            <br>
+                            BOOTSTRAP</div>
+                        <div>
+                            <i class="fa-solid fa-code"></i>
+                            <br>
+                            VS CODE</div>
+                        <div>
+                            <i class="fa-brands fa-square-github"></i>
+                            <br>
+                            GIT/GITHUB</div>
+                        <div>
+                            <i class="fa-solid fa-server"></i>
+                            <br>
+                            NETLIFY</div>
+                        <div>
+                            <i class="fa-solid fa-box"></i>
+                            <br>
+                            FLEXBOX</div>
+                        <div>
+                            <i class="fa-solid fa-tablet"></i>
+                            <br>
+                            RESPONSIVE</div>
+                        <div>
+                            <i class="fa-brands fa-google"></i>
+                            <br>
+                            SEO</div>
+                        <div>
+                            <i class="fa-brands fa-react"></i>
+                            <br>
+                            REACT</div>
                     </div>
-                    <div>
-                        <i class="fa-brands fa-square-js"></i>
-                        <br>
-                        JAVASCRIPT</div>
-                    <div>
-                        <i class="fa-solid fa-gears"></i>
-                        <br>
-                        API</div>
-                    <div>
-                        <i class="fa-brands fa-bootstrap"></i>
-                        <br>
-                        BOOTSTRAP</div>
-                    <div>
-                        <i class="fa-solid fa-code"></i>
-                        <br>
-                        VS CODE</div>
-                    <div>
-                        <i class="fa-brands fa-square-github"></i>
-                        <br>
-                        GIT/GITHUB</div>
-                    <div>
-                        <i class="fa-solid fa-server"></i>
-                        <br>
-                        NETLIFY</div>
-                    <div>
-                        <i class="fa-solid fa-box"></i>
-                        <br>
-                        FLEXBOX</div>
-                    <div>
-                        <i class="fa-solid fa-tablet"></i>
-                        <br>
-                        RESPONSIVE</div>
-                    <div>
-                        <i class="fa-brands fa-google"></i>
-                        <br>
-                        SEO</div>
-                    <div>
-                        <i class="fa-brands fa-react"></i>
-                        <br>
-                        REACT</div>
                 </div>
             </div>
             <div class="buttons-homepage">
