--- a/index.html
+++ b/index.html
@@ -67,52 +67,51 @@
                 <div class="tools-container-homepage">
                     <div class="tools-with-icons">
                         <div>
-                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-brands fa-html5" title="HTML"></i>
                             <br>
                             HTML</div>
                         <div>
-                            <i class="fa-brands fa-css3-alt"></i>
+                            <i class="fa-brands fa-css3-alt" title="CSS"></i>
                             <br>
-                            CSS
-                        </div>
+                            CSS</div>
                         <div>
-                            <i class="fa-brands fa-square-js"></i>
+                            <i class="fa-brands fa-square-js" title="JAVASCRIPT"></i>
                             <br>
                             JAVASCRIPT</div>
                         <div>
-                            <i class="fa-solid fa-gears"></i>
+                            <i class="fa-solid fa-gears" title="API"></i>
                             <br>
                             API</div>
                         <div>
-                            <i class="fa-brands fa-bootstrap"></i>
+                            <i class="fa-brands fa-bootstrap" title="BOOTSTRAP"></i>
                             <br>
                             BOOTSTRAP</div>
                         <div>
-                            <i class="fa-solid fa-code"></i>
+                            <i class="fa-solid fa-code" title="VS CODE"></i>
                             <br>
                             VS CODE</div>
                         <div>
-                            <i class="fa-brands fa-square-github"></i>
+                            <i class="fa-brands fa-square-github" title="GIT/GITHUB"></i>
                             <br>
                             GIT/GITHUB</div>
                         <div>
-                            <i class="fa-solid fa-server"></i>
+                            <i class="fa-solid fa-server" title="NETLIFY"></i>
                             <br>
                             NETLIFY</div>
                         <div>
-                            <i class="fa-solid fa-box"></i>
+                            <i class="fa-solid fa-box" title="FLEXBOX"></i>
                             <br>
                             FLEXBOX</div>
                         <div>
-                            <i class="fa-solid fa-tablet"></i>
+                            <i class="fa-solid fa-tablet" title="RESPONSIVE"></i>
                             <br>
                             RESPONSIVE</div>
                         <div>
-                            <i class="fa-brands fa-google"></i>
+                            <i class="fa-brands fa-google" title="SEO"></i>
                             <br>
                             SEO</div>
                         <div>
-                            <i class="fa-brands fa-react"></i>
+                            <i class="fa-brands fa-react" title="REACT"></i>
                             <br>
                             REACT</div>
                     </div>
